# rest-api-blueprints

./: .gitignore  .pre-commit-config.yaml  .spectral.yaml  CHANGELOG.md  CHECKLIST.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TODO.md
infra/: .gitignore
iso27001-fastapi/: .env.example  .gitignore  .importlinter  Dockerfile  docker-compose.yml  openapi.yaml  pyproject.toml
iso27001-fastapi/app/: __init__.py  main.py
iso27001-fastapi/app/api/: deps.py
iso27001-fastapi/app/api/v1/: auth.py  health.py  router.py  users.py
iso27001-fastapi/app/config/: __init__.py  security.py  settings.py
iso27001-fastapi/app/core/: __init__.py  brute_force.py  database.py  events.py  exceptions.py  metrics.py  middleware.py  rate_limiter.py  responses.py  telemetry.py
iso27001-fastapi/app/domain/: __init__.py  events.py  exceptions.py  persistence.py
iso27001-fastapi/app/domain/users/: __init__.py  events.py  models.py  repository.py  schemas.py  service.py
iso27001-fastapi/app/infrastructure/: audit.py  aws_telemetry.py  encryption.py  error_budget.py  event_dispatcher.py  quality_score.py
iso27001-fastapi/tests/integration/: test_health.py
iso27001-fastapi/tests/unit/: test_error_budget.py  test_events.py  test_quality_score.py  test_rate_limiter.py  test_security.py
iso27001-gin/: .env.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  main.go  openapi.yaml
iso27001-laravel/: .env  .env.example  .gitignore  Dockerfile  composer.json  deptrac.yaml  docker-compose.yml  openapi.yaml  phpstan.neon  phpunit.xml
iso27001-nestjs/: .env.example  (+9 more)
(+288 files in other folders)
